# ComicGTN

./: LICENSE  README.md  pyproject.toml  requirements.txt
model/ComicGTN/: ComicGTN_model.py  FastGTNConv.py  GCNConv.py  settings.py  utils.py
tutorial/: example.ipynb
