[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model/ComicGTN"]

[project]
name = "ComicGTN"
version = "1.0.0"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.0.3",
    "scanpy==1.10.4",
    "anndata==0.11.1",
    "tqdm==4.67.1",
    "torch==2.6.0",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
    "torch-geometric==2.6.1",
    "scipy==1.11.4",
    "leidenalg==0.10.2",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "scikit-learn==1.1.0"
]
requires-python = ">=3.10"
authors = [
    {name = "Boran Yang", email = "23S112102@hit.edu.cn"},
]
description = "Inference of rare populations from Combined multi-omics data using Graph Transformer Networks."
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Jinsl-lab/ComicGTN"
Repository = "https://github.com/Jinsl-lab/ComicGTN"
Issues = "https://github.com/Jinsl-lab/ComicGTN/issues"